# auto_theme_switch

./: .gitignore  README.md  pyproject.toml  run.cmd
auto_theme_switch/: auto_switch_loop.py  config.py  main.py  theme.py  tray.py  utils.py
